# transformer_payne

./: .gitignore  README.md  blackbody_flux.ipynb  default_model.ipynb  pyproject.toml  requirements.txt  tpayne.ipynb  transformer_payne.ipynb
.github/workflows/: python-package.yml  release.yml
reports/junit/: junit.xml
src/tests/: test_blackbody_flux.py  test_transformer_payne.py
src/transformer_payne/: __init__.py  _utility.py  architecture_definition.py  blackbody.py  blackbody_flux.py  download.py  flux_emulator.py  huggingface_config.py  integration.py  intensity_emulator.py  spectrum_emulator.py  transformer_payne.py
tests/: test_blackbody_flux.py  test_tpayne.py  test_transformer_payne.py
tpayne/: __init__.py  architecture_definition.py  blackbody_flux.py  configuration.py  download.py  exceptions.py  flux_emulator.py  huggingface_config.py  intensity_emulator.py  spectrum_emulator.py  tpayne.py  tpayne_consts.py
tutorial/: blackbody_flux.ipynb  compare_bb_and_solar_spectrum.ipynb  defining_abundances.ipynb  fitting_metallicity_and_alpha_elements.ipynb  intenisty_flux_luminosity.ipynb  intensity_flux_luminosity.ipynb  transformer_payne.ipynb
tutorial/data/: Spectrum_HR_integrated_650_700.csv
