[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer_payne"
version = "0.4-beta"
readme = "README.md"

[project.optional-dependencies]
huggingface = ["huggingace-hub", "joblib"]
dev = ["pytest~=8.0.0", "pytest-datadir~=1.5.0", "coverage~=7.4.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]
